--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,3 +42,47 @@
   <%= render "new_comment" %>
   <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
   <%= render "comments" %>
+
+
+
+<div class="container product-show-wrapper">
+  <div class="row" data-product-id="<%= @product.id %>">
+    <% if user_signed_in? && current_user.admin? %>
+      <div class="col-xs-12">
+        <%= link_to 'Edit', edit_product_path(@product) %> |
+        <%= link_to 'Back', products_path %> |
+        <%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    <% end %>
+    <div class="col-xs-12 col-sm-8 product-box">
+      <% cache @product do %>
+        <p class="product-name">
+          <%= @product.name %>
+        </p>
+        
+        <p class="product-description">
+          <%= @product.description %>
+        </p>
+        <p class="product-price col-xs-12">
+          <%= @product.price %> 
+        </p>
+        <p>Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+        
+        <%= form_tag "../payments/create" do %>
+          <%= hidden_field_tag(:product_id, @product.id) %>        
+          <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <p class="product-image">
+          <%= image_tag(@product.image_url, class: "img-responsive image-zoom", data_zoom_image: @product.image_url) %>
+        </p>
+        <% end %>
+    </div>
+  
+  </div>
+  <%= render "new_comment" %>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+  <%= render "comments" %>
+  
+</div>
