--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
         <p class="product-price col-xs-12">
           <%= @product.price %> 
         </p>
-        <p>Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+         <p>Average Rating: <div class="rated" id=average-rating data-score="<%= @product.average_rating %>"></div> </p>
         
         <%= form_tag "../payments/create" do %>
           <%= hidden_field_tag(:product_id, @product.id) %>        
