--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -27,7 +27,9 @@
 }
 
 .product-image img{
-  max-height: 400px;
+  width: 150px;
+  position: relative;
+  margin: auto;
 }
 
 
@@ -45,14 +47,14 @@
   font-weight: bold;
   color: #58e3b5;
   font-family: 'Raleway', sans-serif;
-  font-size: 3em;
+  font-size: 4em;
   min-height: 100px;
 }
 
 .product-price {
   text-align: center;
   color: #ffc9c9;
-  font-size: 3em;
+  font-size: 4em;
   font-family: 'Raleway', sans-serif;
 }
 
